# react-native-enriched

./: .gitignore  .yarnrc.yml  CONTRIBUTING.md  LICENSE  README.md  ReactNativeEnriched.podspec  ReactNativeRichTextEditor.podspec  eslint.config.mjs  lefthook.yml  package.json  react-native.config.js  tsconfig.base.json  tsconfig.build.json  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: android-verify.yml  ci.yml  e2e.yml  lint-clang.yaml  publish.yml  test-cpp.yml
.maestro/flows/: checkbox_toggle.yaml  codeblock_no_link_detection.yaml  conflicting_paragraph_merge.yaml  core_controls_smoke.yaml  empty_element_parsing.yaml  empty_html_block_parsing.yaml  empty_lists_parsing.yaml  extending_paragraph_style_on_paste_after_cut.yaml  image_position_stability.yaml  initial_html_parsing.yaml  inline_styles_survive_block_toggle.yaml  inline_styles_visual.yaml  link_not_extended.yaml  list_newline_insertion.yaml  mention_parsing_handles_single_quoted_attributes.yaml  paragraph_style_toggle.yaml  paragraph_styles_blocks_visual.yaml  paragraph_styles_headings_visual.yaml  paragraph_styles_lists_visual.yaml  placeholder_visual.yaml  scrolling_after_typing.yaml  scrolling_with_paragraph_styles.yaml
.maestro/scripts/: delete-enriched-devices.sh  run-tests-all.sh  run-tests.sh  setup-android-emulator.sh  setup-ios-simulator.sh
.maestro/subflows/: capture_or_assert_screenshot.yaml  insert_image.yaml  pick_first_image.yaml
.playwright/: playwright.config.ts
.playwright/helpers/: clipboard.ts  selection.ts  visual-regression.ts
.playwright/tests/: applyWrappingListSelection.spec.ts  checkboxList.spec.ts  codeblockInlineStyles.spec.ts  conflictingBlockStyles.spec.ts  headingBoldFromStyle.spec.ts  images.spec.ts  inlineStyles.spec.ts  inputShortcuts.spec.ts  links.spec.ts  listKeyboard.spec.ts  listNestedHtml.spec.ts  mentions.spec.ts  paragraphStylesVisual.spec.ts  strictMarks.spec.ts  testLinks.spec.ts  wrappedBlockKeyboard.spec.ts
android/: build.gradle  gradle.properties  lint.gradle
android/src/main/new_arch/: CMakeLists.txt  GumboNormalizerJni.cpp  RNEnrichedTextInputViewSpec.cpp  RNEnrichedTextInputViewSpec.h  ReactNativeEnrichedSpec.cpp  ReactNativeEnrichedSpec.h
android/src/main/new_arch/react/renderer/components/RNEnrichedTextInputViewSpec/: EnrichedTextInputComponentDescriptor.h  EnrichedTextInputMeasurementManager.cpp  EnrichedTextInputMeasurementManager.h  EnrichedTextInputProps.cpp  EnrichedTextInputProps.h  EnrichedTextInputShadowNode.cpp  EnrichedTextInputShadowNode.h  EnrichedTextInputState.cpp  EnrichedTextInputState.h  conversions.h
android/src/main/new_arch/react/renderer/components/RNReactNativeRichTextEditorViewSpec/: ComponentDescriptors.cpp  ComponentDescriptors.h  EventEmitters.cpp  EventEmitters.h  Props.cpp  Props.h  ReactNativeRichTextEditorShadowNode.cpp  ReactNativeRichTextEditorShadowNode.h  ReactNativeRichTextEditorState.cpp  ReactNativeRichTextEditorState.h  ReactNativeRichTextEditorViewComponentDescriptor.h  ReactNativeRichTextEditorViewState.cpp  ReactNativeRichTextEditorViewState.h  RichTextEditorMeasurementManager.cpp  RichTextEditorMeasurementManager.h
android/src/main/new_arch/react/renderer/components/ReactNativeEnrichedSpec/: EnrichedTextInputMeasurementManager.h  EnrichedTextInputShadowNode.cpp  EnrichedTextInputShadowNode.h  EnrichedTextInputState.cpp  EnrichedTextInputState.h  conversions.h
apps/example/: Gemfile  README.md  babel.config.js  package.json  react-native.config.js  tsconfig.json
apps/example-web/: README.md  eslint.config.mjs  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
cpp/: CMakeLists.txt  README.md
cpp/GumboParser/: GumboParser.h
cpp/lexbor/: lexbor.h
cpp/parser/: GumboNormalizer.c  GumboParser.cpp  GumboParser.hpp  LexborParser.cpp  LexborParser.hpp  gumbo_normalizer.c  lexbor_normalizer.c
cpp/tests/: GumboParserTest.cpp  LexborParserTest.cpp
docs/: API_REFERENCE.md  INPUT_API_REFERENCE.md  RELEASE.md  TEXT_API_REFERENCE.md  WEB.md  autolinks-e2e-plan.md
example/: app.json  package.json  react-native.config.js
example/android/: link-assets-manifest.json  (+1 more)
ios/: EnrichedTextInputModule.h  EnrichedTextInputModule.mm  EnrichedTextInputStyles.h  EnrichedTextInputStyles.mm  EnrichedTextInputView.h  EnrichedTextInputView.mm  EnrichedTextInputViewManager.mm  EnrichedTextView.h  EnrichedTextView.mm  ReactNativeRichTextEditorView.h  ReactNativeRichTextEditorView.mm  ReactNativeRichTextEditorViewManager.mm
scripts/: setup-lexbor.sh
src/: EnrichedText.tsx  EnrichedTextInput.tsx  EnrichedTextInputNativeComponent.ts  NativeEnrichedTextInputModule.ts  ReactNativeRichTextEditorViewNativeComponent.ts  RichTextInput.tsx  colorParser.ts  index.native.tsx  index.tsx  index.web.tsx  normalizeHtmlStyle.ts  normalizeRichTextStyle.ts  types.ts
test-results/: .last-run.json
(+712 files in other folders)
